--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -3,3 +3,4 @@
 @import 'layout/variables.scss';
 @import 'layout/mixins.scss';
 @import 'layout/global.scss';
+@import 'sections/headerSection.scss';
