--- a/app/scss/sections/headerSection.scss
+++ b/app/scss/sections/headerSection.scss
@@ -1,9 +1,43 @@
-.headerSection {
+.header {
     background: url('../../img/background/headerBackground.png') no-repeat center center;
     background-size: cover;
     height: 1100px;
 }
 
-.headerSectionContent {
+.headerContent {
     @include verticalAlign;
+    width: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    font-family: latoHairline;
+    color: $colorType1;
+    &__title {
+        font-size: 48px;
+        line-height: 48px;
+        margin-bottom: 30px; 
+    }
+    &__description {
+        font-size: 24px;
+        line-height: 24px;
+        text-align: center;
+        margin-bottom: 120px;
+    }
+    &__menu {
+        display: flex;
+    }
+}
+
+.headerContent__menuLink {
+    display: block;
+    width: 167px;
+    height: 181px;
+    background: url('../../img/content/header/linkBackground.png') no-repeat;
+}
+
+.logo_headerSection {
+    font-size: 90px;
+    line-height: 90px;
+    color: $colorType1;
+    margin-bottom: 80px;
 }
