--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -3,4 +3,8 @@
 @import 'layout/variables.scss';
 @import 'layout/mixins.scss';
 @import 'layout/global.scss';
-@import 'sections/headerSection.scss';
+@import 'sections/header.scss';
+@import 'sections/navigation.scss';
+@import 'sections/sectionFeature.scss';
+@import 'sections/sectionAbout.scss';
+@import 'sections/sectionQuote.scss';
