--- a/app/scss/layout/fonts.scss
+++ b/app/scss/layout/fonts.scss
@@ -51,3 +51,27 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'helveticaNeueLTStdLt';
+    src: url('../../fonts/HelveticaNeueLTStd-Lt.woff') format('woff'),
+         url('../../fonts/HelveticaNeueLTStd-Lt.svg#HelveticaNeueLTStd-Lt') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'helveticaNeueLTStdBd';
+    src: url('../../fonts/HelveticaNeueLTStd-Bd.woff') format('woff'), 
+         url('../../fonts/HelveticaNeueLTStd-Bd.svg#HelveticaNeueLTStd-Bd') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'helveticaNeueLTStdBdCn';
+    src: url('../../fonts/HelveticaNeueLTStd-BdCn.woff') format('woff'), 
+         url('../../fonts/HelveticaNeueLTStd-BdCn.svg#HelveticaNeueLTStd-BdCn') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
