--- a/app/scss/sections/sectionFeature.scss
+++ b/app/scss/sections/sectionFeature.scss
@@ -30,10 +30,7 @@
         }
     }
     &__icon {
-        display: block;
-        @include verticalAlign;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        @include iconСentering;
     }
     &__name {
         font-size: 24px;
