--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -7,4 +7,6 @@
 @import 'sections/navigation.scss';
 @import 'sections/sectionFeature.scss';
 @import 'sections/sectionAbout.scss';
-@import 'sections/sectionQuote.scss';
+@import 'sections/sectionIntermediate.scss';
+@import 'sections/sectionTeam.scss';
+@import 'sections/sectionStatistics.scss';
