--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,3 +9,5 @@
 @import 'sections/sectionIntermediate.scss';
 @import 'sections/sectionTeam.scss';
 @import 'sections/sectionStatistics.scss';
+@import 'sections/sectionPortfolio.scss';
+@import 'sections/sectionContact.scss';
