--- a/src/scss/layout/global.scss
+++ b/src/scss/layout/global.scss
@@ -33,8 +33,13 @@ a {
 }
 
 a:link, a:visited, a:hover, a:active {
-	border: none;
 	outline: none;
+}
+
+button {
+	padding: 0;
+	border: none;
+	cursor: pointer;
 }
 
 .wrapper {
@@ -72,6 +77,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .button {
+	display: inline-block;
 	width: 228px;
 	height: 72px;
 	text-align: center;
