--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -43,7 +43,7 @@
         justify-content: center;
         align-items: center;
         color: $colorType1;
-        transition: background .3s;
+        transition: background 1s;
         background: url('../../img/content/polygon.png') no-repeat;
         &:hover {
             background: url('../../img/content/header/polygonHover.png') no-repeat;
@@ -65,7 +65,7 @@
     height: 93px;
     background: url('../../img/content/header/scrollDown.png') no-repeat;
     position: relative;
-    transition: background .3s;
+    transition: background 1s;
     &:hover {
         background: url('../../img/content/header/scrollDownHover.png') no-repeat;
     }
